deployments/k8s/pfr/r-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r-pipelines
  namespace: sandbox
  labels:
    app: r-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: r-pipelines
    spec:
      containers:
        - image: h2oai/h2o-open-source-k8s:3.44.0.3
          resources:
            requests:
              memory: "4Gi"
          ports:
            - containerPort: 54321
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /kubernetes/isLeaderNode
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
          imagePullPolicy: Always
          name: h2o
        - image: postgres:15.3-bullseye
          imagePullPolicy: Always
          name: postgres
        - image: ghcr.io/plant-food-research-open/superset-dev:0.1.0
          imagePullPolicy: Always
          name: superset
        - image: minio/minio:RELEASE.2023-05-27T05-56-19Z
          imagePullPolicy: Always
          name: minio
          workingDir: /data
          args:
            - server
            - --console-address
            - :9001
            - --address
            - :9000
            - /data
      restartPolicy: Always
