deployments/k8s/pfr/r-models-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r-pipelines-models
  namespace: sandbox
  labels:
    app: r-pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r-pipelines
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: r-pipelines
    spec:
      containers:
        - image: ghcr.io/plant-food-research-open/shiny-rpipelines:0.1.0
          imagePullPolicy: Always
          name: shiny
          ports:
            - containerPort: 3838
              protocol: TCP
          args:
            - R
            - -e
            - shiny::runApp('/app', launch.browser = FALSE, host = '0.0.0.0', port = 3838)
        - image: ghcr.io/plant-food-research-open/shiny-rpipelines:0.1.0
          imagePullPolicy: Always
          name: random-forest
          ports:
            - containerPort: 8089
              protocol: TCP
          args:
            - Rscript
            - api/vetiver_deploy.R
        - image: ghcr.io/plant-food-research-open/shiny-rpipelines:0.1.0
          imagePullPolicy: Always
          name: gompertz
          ports:
            - containerPort: 8090
              protocol: TCP
          args:
            - Rscript
            - api/vetiver_deploy.R
      restartPolicy: Always
