deployments/k8s/pfr/r-models-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: r-pipelines-models
  namespace: sandbox
  labels:
    app: r-pipelines
spec:
  template:
    metadata:
      labels:
        app: r-pipelines
  selector:
    app: r-pipelines
  type: LoadBalancer
  ports:
    - name: port-3838
      protocol: TCP
      port: 3838
      targetPort: 3838
    - name: port-3839
      protocol: TCP
      port: 3839
      targetPort: 3839
    - name: port-8089
      protocol: TCP
      port: 8089
      targetPort: 8089
    - name: port-8090
      protocol: TCP
      port: 8090
      targetPort: 8090
