deployments/k8s/pfr/r-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: r-pipelines
  namespace: sandbox
  labels:
    app: r-pipelines
spec:
  template:
    metadata:
      labels:
        app: r-pipelines
  selector:
    app: r-pipelines
  type: LoadBalancer
  ports:
    - name: port-54321
      protocol: TCP
      port: 54321
      targetPort: 54321
    - name: port-5432
      protocol: TCP
      port: 5432
      targetPort: 5432
    - name: port-9000
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: port-9001
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: port-8088
      protocol: TCP
      port: 8088
      targetPort: 8088
